Fixed footer position issue, footer is now stuck to bottom

--- a/constructionStyles.css
+++ b/constructionStyles.css
@@ -13,12 +13,12 @@
     align-items: center;
 }
 .header__blank{
-    width: 98px;
+    width: 192.36px;
 }
 .footer {
     background-color: #FF6600;
     height: 98px;
-    display: flex;
+    /* width: 100%; */
     border-radius: 20px 20px 0px 0px;
 }
 .footer__img {
@@ -26,21 +26,45 @@
     width: 50px;
     padding: 24px;
 }
+h1 {
+    font-family: 'highway_gothicregular';
+    font-weight: normal;
+    font-style: normal;
+    font-size: 200%;
+}
 h2 {
     margin: 10px;
     padding: 5px;
     border: 10px solid black;
     display: flex;
     font-size: 300%;
-    font-family: 'Highway Gothic', serif;
     font-family: 'highway_gothicregular';
     font-weight: normal;
     font-style: normal;
     text-align: center;
 }
-body {
+.pageWrapper {
     display: flex; 
     flex-wrap: wrap;
     flex-direction: column; 
+    height: 100%
+}
+body {
     background-color: #F4C095;
+    height: 100%;
+}
+
+@media screen and (max-width: 800px){
+    h1 {
+        font-size: 100%;
+    }
+    h2 {
+        font-size: 200%;
+    }
+    .header__blank{
+        width: 76.34px;
+    }
+}
+html {
+    height: 100%;
 }
